# payload-dumper

./: README.md  payload_dumper.py  pyproject.toml  requirements.txt
payload_dumper/: dumper.py  update_metadata_pb2.py
