[tool.poetry]
name = "payload_dumper"
version = "0.1.0"
description = ""
authors = ["Rasmus Moorats <xx@nns.ee>"]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^3.19.1"
bsdiff4 = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
